# devteam_agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  one_example.py  pyproject.toml
.agents/skills/speckit-tasks/: SKILL.md
.claude/skills/report-generation/: SKILL.md
.claude/skills/team-summary/: SKILL.md
.claude/skills/weekly-report-sop/: SKILL.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
docs/: tech-sharing.md  web-ui-design.md
scripts/: migrate_reports.py
src/: __init__.py  config.py  main.py  template.md
src/integrations/: __init__.py  gitlab_client.py  jira_client.py
src/report/: __init__.py  file_report_manager.py  generator.py  markdown_manager.py
src/tools/: __init__.py  gitlab_tools.py  jira_tools.py  report_tools.py  time_tools.py
src/web/: __init__.py  __main__.py  app.py
src/web/static/: app.js  style.css
src/web/templates/: index.html
tests/: e2e_smoke.py  test_file_report_manager.py
