[project]
name = "devteam-agent"
version = "0.1.0"
description = "Team work management agent powered by Claude, with GitLab and Jira integration"
requires-python = ">=3.14"
dependencies = [
    "claude-agent-sdk==0.1.10",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
]

[project.scripts]
devteam-agent = "src.main:main"
